--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ s.parentNode.insertBefore(b, s);})(window.lintrk);
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
 					<li><a class="nav-item nav-link" href="https://scrs.in/conference/aic2024">Home</a></li>          
-					  <li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/aic_2024_program_schedule">AIC 2024 Program Schedule<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Camera_Ready_Paper_Submission">Camera Ready Paper Submission<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Best_Paper Award">Best Paper Award</a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/registration_fee">Registration and Fee Details<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Venue">Venue</a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Contact_Us">Contact Us</a> </li>
+					  <li><a class='nav-item nav-link' href="AIC2024Program.html">AIC 2024 Program Schedule<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Camera_Ready_Paper_Submission">Camera Ready Paper Submission<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Best_Paper Award">Best Paper Award</a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/registration_fee">Registration and Fee Details<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Venue">Venue</a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Contact_Us">Contact Us</a> </li>
 					  						<li><a class="nav-link scrollto" href="https://scrs.in/conference/aic2024/join-us">Join Us</a></li>
 					  					  <!--li><a class="nav-item nav-link" href="http://scrs.in" target="_blank">SCRS</a></li-->
                 </div>               
@@ -249,7 +249,7 @@ s.parentNode.insertBefore(b, s);})(window.lintrk);
 <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-primary text-uppercase">KEYNOTE SPEAKERS</h5>
+            <h5 class="fw-bold text-primary text-uppercase">COMMITTEE CHAIR</h5>
         </div>
         <div class="row g-5 justify-content-center">
             <div id="keynoteCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -772,7 +772,7 @@ s.parentNode.insertBefore(b, s);})(window.lintrk);
                             </div> 
                                     <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="046d616161656d67446369656d682a676b69">[email&#160;protected]</a><p>
 <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5e3f373d1e2d3d2c2d703730">[email&#160;protected]</a></p>
-<p><i class="fab fa-whatsapp fw-normal"></i> +91-7692804154  <br> (whatsapp messages only)</p>
+<p><i class="fab fa-whatsapp fw-normal"></i> +918072104656  <br> (whatsapp messages only)</p>
                         </div>				
 
 						<div class="col-lg-3 col-md-12  pt-5">
