--- a/AIC2024Program.html
+++ b/AIC2024Program.html
@@ -62,14 +62,14 @@ s.parentNode.insertBefore(b, s);})(window.lintrk);
    
     <nav class="nav">
          <!-- <div class="logo">AIC2024</div> -->
-      <a href="#">Home</a>
-      <a href="#">AIC 2024 Program Schedule</a>
-      <a href="#">Camera Ready Paper Submission</a>
-      <a href="#">Best Paper Award</a>
-      <a href="#">Registration and Fee Details</a>
-      <a href="#">Venue</a>
-      <a href="#">Contact Us</a>
-      <a href="#">Join Us</a>
+      <a href="index.html">Home</a>
+      <a href="AIC2024Program.html">AIC 2024 Program Schedule</a>
+      <a href="CameraReady.html">Camera Ready Paper Submission</a>
+      <a href="BestPaperAward.html">Best Paper Award</a>
+      <a href="Registration.html">Registration and Fee Details</a>
+      <a href="Venue.html">Venue</a>
+      <a href="Contact.html">Contact Us</a>
+      <a href="JoinUs.html">Join Us</a>
        <h1>AIC 2024 Program Schedule</h1> 
     </nav>
   </header>
