--- a/index.html
+++ b/index.html
@@ -74,8 +74,13 @@ s.parentNode.insertBefore(b, s);})(window.lintrk);
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
 					<li><a class="nav-item nav-link" href="https://scrs.in/conference/aic2024">Home</a></li>          
-					  <li><a class='nav-item nav-link' href="AIC2024Program.html">AIC 2024 Program Schedule<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Camera_Ready_Paper_Submission">Camera Ready Paper Submission<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Best_Paper Award">Best Paper Award</a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/registration_fee">Registration and Fee Details<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Venue">Venue</a> </li><li><a class='nav-item nav-link' href="https://scrs.in/conference/aic2024/page/Contact_Us">Contact Us</a> </li>
-					  						<li><a class="nav-link scrollto" href="https://scrs.in/conference/aic2024/join-us">Join Us</a></li>
+					  <li><a class='nav-item nav-link' href="AIC2024Program.html">AIC 2024 Program Schedule<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li>
+                      <li><a class='nav-item nav-link' href="CameraReady.html">Camera Ready Paper Submission<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li>
+                      <li><a class='nav-item nav-link' href="BestPaperAward.html">Best Paper Award</a> </li>
+                      <li><a class='nav-item nav-link' href="Registration.html">Registration and Fee Details<img src="https://scril.sau.int/csct23/assets/images/imageNew1.gif" alt="" style="width: 30px; height:14px;"></a> </li>
+                      <li><a class='nav-item nav-link' href="Venue.html">Venue</a> </li>
+                      <li><a class='nav-item nav-link' href="Contact.html">Contact Us</a> </li>
+					  <li><a class="nav-link scrollto" href="JoinUs.html">Join Us</a></li>
 					  					  <!--li><a class="nav-item nav-link" href="http://scrs.in" target="_blank">SCRS</a></li-->
                 </div>               
             </div>
