--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@ s.parentNode.insertBefore(b, s);})(window.lintrk);
                                                         <div class="col-lg-3 wow slideInUp" data-wow-delay="0.3s">
                                 <div class="team-item bg-light rounded overflow-hidden">
                                     <div class="team-img position-relative overflow-hidden">
-                                                                                    <img src="Images/Sir-image.jpg" class="img-fluid w-100" style="height:288px">
+                                                                                    <img src="Images/Sir-image.png" class="img-fluid w-100" style="height:288px">
                                                                             </div>
                                     <div class="text-center py-4">
-                                        <h5 class="text-primary">Mr. RadhaKrishna Arikrishna Perumal</h5>
-                                        <p class="text-uppercase m-0">Software Architect , Anchor General Insurance Agency</p>
+                                        <h5 class="text-primary">RadhaKrishna Perumal</h5>
+                                        <p class="m-0">Anchor General Insurance Agency</p>
                                                                             </div>
                                 </div>
                             </div>
